--- a/kafka-topic.yaml
+++ b/kafka-topic.yaml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: qe
+  name: survey
   labels:
     strimzi.io/cluster: kafka-app
 spec:
