--- a/kafka-topic.yaml
+++ b/kafka-topic.yaml
@@ -1,13 +1,14 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: survey
+  name: survey-topic
   labels:
-    strimzi.io/cluster: kafka-app
+    strimzi.io/cluster: "swe645-kafka-cluster"
 spec:
   partitions: 3
   replicas: 1
+  cleanup.policy: compact
   config:
     retention.ms: 7200000
     segment.bytes: 1073741824
-    cleanup.policy: compact
+
